# wenet-binding

./: .gitmodules  CMakeLists.txt  README.md
go/: README.md
go/wenet/: .#model.go  model.go  wenet.cc  wenet.h
python/: README.md  py_asr_wrapper.cc  setup.py
python/wenet/: __init__.py  assets.py  download.py  label_check.py  model.py  streamming_decoder.py
wenet_wrapper/interface/: runtime_wrapper.cc  runtime_wrapper.h
